tests/sources/invalid/classes/instance_method_arg_count.fire
// Semantic error: instance method call with the wrong number of arguments.

class Counter {
    int32 value;

    Counter(int32 value) {
        this.value = value;
    }

    int32 add(int32 amount) {
        return this.value + amount;
    }
}

void instance_method_arg_count() {
    Counter c = new Counter(0);
    c.add(1, 2);  //~ ERROR FS-SEM-0010 @7
}
